[package]
name = "mothrbox_backend_v2"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.8"
bcrypt = "0.17.1"
bson = {version="2.15.0", features=["chrono-0_4"]}
chrono = {version="0.4.42", features=["serde"]}
dotenv = "0.15.0"
jsonwebtoken = {version="10.2.0", features=["rust_crypto"]}
mongodb = "3.4.1"
serde = {version="1.0.228", features=["derive"]}
serde_json = "1.0.146"
tokio = {version="1.48.0", features = ["full"]}
tower = "0.5.2"
tower-http = {version="0.6.8", features=["cors"]}
tracing = "0.1.44"
tracing-subscriber = {version="0.3.22", features=["env-filter"]}
uuid = {version="1.19.0", features=["v4", "serde"]}
